// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> should allow id overriding 1`] = `
<div
  class="base"
>
  <div
    class="base border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base none_mobile_base none_mobile_base 1_mobile_base none_mobile_base tabsList_root"
    role="tablist"
  >
    <button
      aria-controls="tab-1-title-0"
      aria-selected="true"
      class="base appearance cursorPointer button display_block navItem_default_base navItem_active_base"
      role="tab"
    >
      <span
        class="tabItem"
      >
        tab 1 title
      </span>
    </button>
    <button
      aria-controls="tab-2-title-1"
      aria-selected="false"
      class="base appearance cursorPointer button display_block navItem_default_base"
      role="tab"
      tabindex="-1"
    >
      <span
        class="tabItem"
      >
        tab 2 title
      </span>
    </button>
    <button
      aria-controls="tab-3-title-2"
      aria-selected="false"
      class="base appearance cursorPointer button display_block navItem_default_base"
      role="tab"
      tabindex="-1"
    >
      <span
        class="tabItem"
      >
        tab 3 title
      </span>
    </button>
  </div>
  <div
    class="base 6_mobile_base 6_mobile_base tabPanes"
  >
    <div
      class="base tabPane"
      id="tab-1-title-0"
      role="tabpanel"
      tabindex="0"
    >
      tab 1 content
    </div>
  </div>
</div>
`;

exports[`<Tabs /> should allow rendering indications 1`] = `
<div
  class="base"
>
  <div
    class="base border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base none_mobile_base none_mobile_base 1_mobile_base none_mobile_base tabsList_root"
    role="tablist"
  >
    <button
      aria-controls="10-0-tab"
      aria-selected="true"
      class="base appearance cursorPointer button display_block navItem_default_base navItem_active_base"
      role="tab"
    >
      <span
        class="tabItem"
      >
        tab 1 title
      </span>
      <span
        class="navItemIndication_default_base navItemIndication_active_base"
      >
        5
      </span>
    </button>
    <button
      aria-controls="10-1-tab"
      aria-selected="false"
      class="base appearance cursorPointer button display_block navItem_default_base"
      role="tab"
      tabindex="-1"
    >
      <span
        class="tabItem"
      >
        tab 2 title
      </span>
      <span
        class="navItemIndication_default_base"
      >
        5
      </span>
    </button>
    <button
      aria-controls="10-2-tab"
      aria-selected="false"
      class="base appearance cursorPointer button display_block navItem_default_base"
      role="tab"
      tabindex="-1"
    >
      <span
        class="tabItem"
      >
        tab 3 title
      </span>
      <span
        class="navItemIndication_default_base"
      >
        5
      </span>
    </button>
  </div>
  <div
    class="base 6_mobile_base 6_mobile_base tabPanes"
  >
    <div
      class="base tabPane"
      id="10-0-tab"
      role="tabpanel"
      tabindex="0"
    >
      tab 1 content
    </div>
  </div>
</div>
`;

exports[`<Tabs /> should match snapshot (high level) 1`] = `
<div
  class="base"
>
  <div
    class="base border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base none_mobile_base none_mobile_base 1_mobile_base none_mobile_base tabsList_root"
    role="tablist"
  >
    <button
      aria-controls="1-0-tab"
      aria-selected="true"
      class="base appearance cursorPointer button display_block navItem_default_base navItem_active_base"
      role="tab"
    >
      <span
        class="tabItem"
      >
        tab 1 title
      </span>
    </button>
    <button
      aria-controls="1-1-tab"
      aria-selected="false"
      class="base appearance cursorPointer button display_block navItem_default_base"
      role="tab"
      tabindex="-1"
    >
      <span
        class="tabItem"
      >
        tab 2 title
      </span>
    </button>
    <button
      aria-controls="1-2-tab"
      aria-selected="false"
      class="base appearance cursorPointer button display_block navItem_default_base"
      role="tab"
      tabindex="-1"
    >
      <span
        class="tabItem"
      >
        tab 3 title
      </span>
    </button>
  </div>
  <div
    class="base 6_mobile_base 6_mobile_base tabPanes"
  >
    <div
      class="base tabPane"
      id="1-0-tab"
      role="tabpanel"
      tabindex="0"
    >
      tab 1 content
    </div>
  </div>
</div>
`;
